[package]
name = "sopipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ["rt", "rt-multi-thread", "sync", "time", "signal"] } # "io-util", "io-std", "net", "process", "fs"
pest = "2.0"
pest_derive = "2.0"

api = { path = "api" }

drop = { path = "components/drop", optional = true }
echo = { path = "components/echo", optional = true }
exec = { path = "components/exec", optional = true }
socks5 = { path = "components/socks5", optional = true }
stdio = { path = "components/stdio", optional = true }
tcp = { path = "components/tcp", optional = true }
throttle = { path = "components/throttle", optional = true }
udp = { path = "components/udp", optional = true }
xor = { path = "components/xor", optional = true }

[features]
# core includes most endpoints. It serves as the basis for "slim" builds.
core = ["tcp", "udp", "stdio", "exec"]

# default includes most common components that supports static linking.
default = ["core", "xor", "echo", "socks5", "drop", "throttle"]

[workspace]
