[package]
name = "sopipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "signal"] } # "io-util", "io-std", "net", "process", "fs"
pest = "2.7"
pest_derive = "2.7"

api = { path = "api" }

aead = { path = "components/aead", optional = true }
auth = { path = "components/auth", optional = true }
balance = { path = "components/balance", optional = true }
drop = { path = "components/drop", optional = true }
echo = { path = "components/echo", optional = true }
exec = { path = "components/exec", optional = true }
miniz = { path = "components/miniz", optional = true }
socks5 = { path = "components/socks5", optional = true }
stdio = { path = "components/stdio", optional = true }
tcp = { path = "components/tcp", optional = true }
tee = { path = "components/tee", optional = true }
throttle = { path = "components/throttle", optional = true }
udp = { path = "components/udp", optional = true }
xor = { path = "components/xor", optional = true }

[features]
# core includes most endpoints. It serves as the basis for "slim" builds.
core = ["tcp", "udp", "stdio", "exec"]

# default includes most common components that supports static linking.
default = ["core", "xor", "echo", "socks5", "drop", "throttle", "auth", "tee", "balance", "aead", "miniz"]

[workspace]
