[package]
name = "sopipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "signal"] }
pest = "2.7"
pest_derive = "2.7"

api = { path = "api" }

aead = { path = "components/aead", optional = true }
auth = { path = "components/auth", optional = true }
balance = { path = "components/balance", optional = true }
drop = { path = "components/drop", optional = true }
echo = { path = "components/echo", optional = true }
exec = { path = "components/exec", optional = true }
http2 = { path = "components/http2", optional = true }
miniz = { path = "components/miniz", optional = true }
socks5 = { path = "components/socks5", optional = true }
stdio = { path = "components/stdio", optional = true }
tcp = { path = "components/tcp", optional = true }
tee = { path = "components/tee", optional = true }
throttle = { path = "components/throttle", optional = true }
udp = { path = "components/udp", optional = true }
vmess = { path = "components/vmess", optional = true }
xor = { path = "components/xor", optional = true }

[features]
# default includes components that support static linking.
default = ["tcp", "udp", "stdio", "exec", "xor", "echo", "socks5", "drop", "throttle", "auth", "tee", "balance", "aead", "miniz", "vmess"]

# full includes all features.
full = ["default", "http2"]

[workspace]
